<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_variation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.madose.Variation">



    <TextView
        android:id="@+id/listeE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:fontFamily="sans-serif"
        android:text="@string/liste_des_entr_es"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="normal|bold" tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/listeD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listeS"
        android:layout_marginTop="20dp"
        android:text="@string/co_t_total"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/listeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listeE"
        android:layout_marginTop="12dp"
        android:text="@string/liste_des_sorties"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listeD"
        android:layout_marginTop="20dp"
        android:text="@string/stock"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stock"
        android:layout_marginTop="19dp"
        android:text="@string/demande"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/rupture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="23dp"
        android:text="@string/v_rifier_rupture_de_stock"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textStyle="normal|bold" />

</RelativeLayout>
